# fb-rs

./: Cargo.toml
migrations/: 001_initial.sql  001_tenants.down.sql  001_tenants.up.sql  002_accounts.down.sql  002_accounts.up.sql  003_transactions.down.sql  003_transactions.up.sql  004_events.down.sql  004_events.up.sql  005_journal_entries.down.sql  005_journal_entries.up.sql  006_subledger_entries.down.sql  006_subledger_entries.up.sql  007_quantity_positions.down.sql  007_quantity_positions.up.sql  008_transaction_links.down.sql  008_transaction_links.up.sql  009_idempotency_keys.down.sql  009_idempotency_keys.up.sql  010_instrument_schemas.down.sql  010_instrument_schemas.up.sql  011_posting_templates.down.sql  011_posting_templates.up.sql  012_contracts.down.sql  012_contracts.up.sql  013_settlement_markets.down.sql  013_settlement_markets.up.sql  014_instruments.up.sql  015_owners.down.sql  015_owners.up.sql  016_accumulation_views.down.sql  016_accumulation_views.up.sql  017_accounts_v2.down.sql  017_accounts_v2.up.sql  018_fee_schedule.down.sql  018_fee_schedule.up.sql  019_margin_risk.down.sql  019_margin_risk.up.sql  020_analytics.down.sql  020_analytics.up.sql  (+11 more)
src/: config.rs  main.rs
src/cli/: bench.rs  faker.rs  mod.rs  output.rs
src/db/: batch_writer.rs  event_store.rs  migrations.rs  mod.rs
src/enrichment/: bond.rs  crypto.rs  equity.rs  mod.rs  registry.rs
src/kernel/: attribute_bag.rs  batch_writer.rs  cached_resolver.rs  engine.rs  errors.rs  event.rs  fast_writer.rs  mod.rs  models.rs  pipeline.rs  template_engine.rs  types.rs
(+10 files in other folders)
