[package]
name = "fb"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fb"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "bigdecimal", "json", "rust_decimal"] }
csv = "1"
# Async runtime
tokio = { version = "1", features = ["full"] }
# Financial math
rust_decimal = "1"
rust_decimal_macros = "1"
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# UUID
uuid = { version = "1", features = ["v4", "serde"] }
# Date/time
chrono = { version = "0.4", features = ["serde"] }
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Config
serde_yaml = "0.9"
# Error handling
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
# Random for faker
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
